--- a/examples/index.html
+++ b/examples/index.html
@@ -22,12 +22,12 @@
   </head>
   <body>
     <h1>A-Frame Layout Component</h1>
-    <a href="box/index.html">Box</a>
-    <a href="circle/index.html">Circle</a>
-    <a href="cube/index.html">Cube</a>
-    <a href="dodecahedron/index.html">Docadecahedron</a>
-    <a href="line/index.html">Line</a>
-    <a href="pyramid/index.html">Pyramid</a>
+    <a href="box/">Box</a>
+    <a href="circle/">Circle</a>
+    <a href="cube/">Cube</a>
+    <a href="dodecahedron/">Docadecahedron</a>
+    <a href="line/">Line</a>
+    <a href="pyramid/">Pyramid</a>
 
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon" style="background: #FF5722">
