--- a/examples/line/index.html
+++ b/examples/line/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="http://localhost:9000/build/aframe.js"></script>
     <script src="../build.js"></script>
   </head>
   <body>
